// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div>
  <div
    className="pb-4"
    key="0"
  >
    <Tile
      heading="Personal Details"
      menu={
        <div
          className="flex"
        >
          <div>
            <span>
              <TiTick />
            </span>
            <span>
              Completed
            </span>
          </div>
          <Button
            onClick={[MockFunction]}
            type="button"
            variant="primary"
          >
            Edit
          </Button>
        </div>
      }
    />
  </div>
  <div
    className="pb-4"
    key="1"
  >
    <Tile
      heading="Primary ID"
      menu={
        <div
          className="flex"
        >
          <div>
            <span>
              <TiTimes />
            </span>
            <span>
              Incomplete
            </span>
          </div>
          <Button
            onClick={[MockFunction]}
            type="button"
            variant="primary"
          >
            Edit
          </Button>
        </div>
      }
    />
  </div>
  <div
    className="pb-4"
    key="2"
  >
    <Tile
      heading="Secondary ID"
      menu={
        <div
          className="flex"
        >
          <div>
            <span>
              <TiTick />
            </span>
            <span>
              Completed
            </span>
          </div>
          <Button
            onClick={[MockFunction]}
            type="button"
            variant="primary"
          >
            Edit
          </Button>
        </div>
      }
    />
  </div>
  <div
    className="pb-4"
    key="3"
  >
    <Tile
      heading="Address Information"
      menu={
        <div
          className="flex"
        >
          <div>
            <span>
              <TiTimes />
            </span>
            <span>
              Incomplete
            </span>
          </div>
          <Button
            onClick={[MockFunction]}
            type="button"
            variant="primary"
          >
            Edit
          </Button>
        </div>
      }
    />
  </div>
  <div
    className="pb-4"
    key="4"
  >
    <Tile
      heading="Declaration Risk Management"
      menu={
        <div
          className="flex"
        >
          <div>
            <span>
              <TiTimes />
            </span>
            <span>
              Incomplete
            </span>
          </div>
          <Button
            onClick={[MockFunction]}
            type="button"
            variant="primary"
          >
            Edit
          </Button>
        </div>
      }
    />
  </div>
  <div
    className="pb-4"
    key="5"
  >
    <Tile
      heading="PEP Search"
      menu={
        <div
          className="flex"
        >
          <div>
            <span>
              <TiTimes />
            </span>
            <span>
              Incomplete
            </span>
          </div>
          <Button
            onClick={[MockFunction]}
            type="button"
            variant="primary"
          >
            Edit
          </Button>
        </div>
      }
    />
  </div>
  <div
    className="pb-4"
    key="6"
  >
    <Tile
      heading="Experian"
      menu={
        <div
          className="flex"
        >
          <div>
            <span>
              <TiTick />
            </span>
            <span>
              Completed
            </span>
          </div>
          <Button
            onClick={[MockFunction]}
            type="button"
            variant="primary"
          >
            Edit
          </Button>
        </div>
      }
    />
  </div>
  <div
    className="pb-4"
    key="7"
  >
    <Tile
      heading="Report"
      menu={
        <div
          className="flex"
        >
          <Button
            onClick={[MockFunction]}
            type="button"
            variant="primary"
          >
            View
          </Button>
        </div>
      }
    />
  </div>
</div>
`;

exports[`checklist-detail ChecklistDetail should match snapshot when loading 1`] = `<Loader />`;

exports[`checklist-detail ChecklistDetail should match snapshot when not loading 1`] = `
<Connect(ErrorBoundary)>
  <FlexContainerBasic
    isScrollable={true}
  >
    <FlexContainerResponsive
      flexColumn={true}
      hasPadding={true}
    >
      <div>
        <Connect(Component) />
        <div
          className="pb-4"
          key="0"
        >
          <Tile
            heading="Personal Details"
            menu={
              <div
                className="flex"
              >
                <div>
                  <span>
                    <TiTick />
                  </span>
                  <span>
                    Completed
                  </span>
                </div>
                <Button
                  type="button"
                  variant="primary"
                >
                  Edit
                </Button>
              </div>
            }
          />
        </div>
        <div
          className="pb-4"
          key="1"
        >
          <Tile
            heading="Primary ID"
            menu={
              <div
                className="flex"
              >
                <div>
                  <span>
                    <TiTimes />
                  </span>
                  <span>
                    Incomplete
                  </span>
                </div>
                <Button
                  type="button"
                  variant="primary"
                >
                  Edit
                </Button>
              </div>
            }
          />
        </div>
        <div
          className="pb-4"
          key="2"
        >
          <Tile
            heading="Secondary ID"
            menu={
              <div
                className="flex"
              >
                <div>
                  <span>
                    <TiTick />
                  </span>
                  <span>
                    Completed
                  </span>
                </div>
                <Button
                  type="button"
                  variant="primary"
                >
                  Edit
                </Button>
              </div>
            }
          />
        </div>
        <div
          className="pb-4"
          key="3"
        >
          <Tile
            heading="Address Information"
            menu={
              <div
                className="flex"
              >
                <div>
                  <span>
                    <TiTimes />
                  </span>
                  <span>
                    Incomplete
                  </span>
                </div>
                <Button
                  type="button"
                  variant="primary"
                >
                  Edit
                </Button>
              </div>
            }
          />
        </div>
        <div
          className="pb-4"
          key="4"
        >
          <Tile
            heading="Declaration Risk Management"
            menu={
              <div
                className="flex"
              >
                <div>
                  <span>
                    <TiTimes />
                  </span>
                  <span>
                    Incomplete
                  </span>
                </div>
                <Button
                  type="button"
                  variant="primary"
                >
                  Edit
                </Button>
              </div>
            }
          />
        </div>
        <div
          className="pb-4"
          key="5"
        >
          <Tile
            heading="PEP Search"
            menu={
              <div
                className="flex"
              >
                <div>
                  <span>
                    <TiTimes />
                  </span>
                  <span>
                    Incomplete
                  </span>
                </div>
                <Button
                  type="button"
                  variant="primary"
                >
                  Edit
                </Button>
              </div>
            }
          />
        </div>
        <div
          className="pb-4"
          key="6"
        >
          <Tile
            heading="Experian"
            menu={
              <div
                className="flex"
              >
                <div>
                  <span>
                    <TiTick />
                  </span>
                  <span>
                    Completed
                  </span>
                </div>
                <Button
                  type="button"
                  variant="primary"
                >
                  Edit
                </Button>
              </div>
            }
          />
        </div>
        <div
          className="pb-4"
          key="7"
        >
          <Tile
            heading="Report"
            menu={
              <div
                className="flex"
              >
                <Button
                  type="button"
                  variant="primary"
                >
                  View
                </Button>
              </div>
            }
          />
        </div>
      </div>
    </FlexContainerResponsive>
  </FlexContainerBasic>
  <Component
    afterClose={[MockFunction]}
    id="123"
    modalContentType="PROFILE"
    visible={true}
  />
</Connect(ErrorBoundary)>
`;
